--- a/_config.yml
+++ b/_config.yml
@@ -18,13 +18,13 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Camaleandro
-email: camaleandro@juanfg.es
+title: DJL Corp
+email: info@djlcorp.es
 description: >- # this means to ignore newlines until "baseurl:"
   Adapting to the environment since yesterday.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: Camaleandro
+twitter_username: DJL_Corp
 github_username:  FrogCosmonaut
 
 # Build settings
